fixed landing alignment

--- a/src/Components/Hero/hero.scss
+++ b/src/Components/Hero/hero.scss
@@ -107,7 +107,6 @@
       align-items: center;
       .gif {
         height: 300px;
-        width: 100%;
       }
     }
   }
